--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,6 +11,7 @@
     "@aws-sdk/client-dynamodb": "^3.902.0",
     "@aws-sdk/client-s3": "^3.901.0",
     "@aws-sdk/lib-dynamodb": "^3.902.0",
+    "@aws-sdk/s3-request-presigner": "^3.901.0",
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
