--- a/chrome_extension/frontend/manifest.json
+++ b/chrome_extension/frontend/manifest.json
@@ -1,13 +1,22 @@
 {
-    "manifest_version": 3,
-    "name": "Job Application Tracker",
-    "version": "1.0",
-    "description": "Track your job applications",
-    "action": {
-        "default_popup": "out/index.html"
-    },
-    "permissions": ["activeTab"],
-    "content_security_policy": {
-        "extension_pages": "script-src 'self'; object-src 'self';"
+  "manifest_version": 3,
+  "name": "Job Application Tracker",
+  "description": "Automatically detect and track job applications with AI-powered skill extraction",
+  "version": "2.0",
+  "permissions": ["scripting", "activeTab", "storage"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "icon.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
     }
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "options_page": "options.html",
+  "host_permissions": ["<all_urls>"]
 }
