--- a/chrome_extension/frontend/manifest.json
+++ b/chrome_extension/frontend/manifest.json
@@ -3,7 +3,7 @@
   "name": "Beacon - Job Application Tracker",
   "description": "Your job application navigator - track applications with ease",
   "version": "2.0",
-  "permissions": ["storage"],
+  "permissions": ["storage", "scripting", "activeTab"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
